Parallelize kernel kmeans prediction in GPU

--- a/libsvm-3.22/Makefile
+++ b/libsvm-3.22/Makefile
@@ -1,4 +1,5 @@
 CXX ?= g++
+NVCC ?= nvcc
 CFLAGS = -Wall -Wconversion -fPIC -g
 SHVER = 2
 OS = $(shell uname)
@@ -16,13 +17,15 @@ lib: svm.o
 gtsvm:
 	$(MAKE) -C ../GTSVM all
 
-svm-predict: svm-predict.c svm.o gtsvm
-	$(CXX) $(CFLAGS) svm-predict.c svm.o -o svm-predict -L../GTSVM/lib -lm -lgtsvm -lcudart
-svm-train: svm-train.c svm.o gtsvm
-	$(CXX) $(CFLAGS) svm-train.c svm.o -o svm-train -L../GTSVM/lib -lm -lgtsvm -lcudart
+svm-predict: svm-predict.c svm.o cusvm.o gtsvm
+	$(CXX) $(CFLAGS) svm-predict.c svm.o cusvm.o -o svm-predict -L../GTSVM/lib -lm -lgtsvm -lcudart -lcusparse
+svm-train: svm-train.c svm.o cusvm.o gtsvm
+	$(CXX) $(CFLAGS) svm-train.c svm.o cusvm.o -o svm-train -L../GTSVM/lib -lm -lgtsvm -lcudart -lcusparse
 svm-scale: svm-scale.c
 	$(CXX) $(CFLAGS) svm-scale.c -o svm-scale
 svm.o: svm.cpp svm.h
 	$(CXX) -I../GTSVM/lib $(CFLAGS) -c svm.cpp
+cusvm.o: cusvm.cu svm.h
+	$(NVCC) -c cusvm.cu
 clean:
 	rm -f *~ svm.o svm-train svm-predict svm-scale libsvm.so.$(SHVER)
