remove debug and add optimization flags

--- a/libsvm-3.22/Makefile
+++ b/libsvm-3.22/Makefile
@@ -1,6 +1,6 @@
 CXX ?= g++
 NVCC ?= nvcc
-CFLAGS = -Wall -Wconversion -fPIC -g
+CFLAGS = -Wall -Wconversion -fPIC -O3
 SHVER = 2
 OS = $(shell uname)
 
